feat: /v2/metrics
