# api/openapi/openapi.yaml
@@ -12,23 +12,6 @@ security:
   - HTTP: []
 
 paths:
-
-  /v2/metrics:
-    get:
-      description: Gets the Cluster Manager REST API prometheus metrics.
-      security: [] # skips authentication
-      tags:
-        - Prometheus Metrics
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: string
-        "500":
-          $ref: '#/components/responses/500-InternalServerError'
- 
   /v2/clusters:
     parameters:
     - $ref: '#/components/parameters/ActiveProjectIdHeader'
@@ -146,7 +129,6 @@ paths:
         "500":
           $ref: '#/components/responses/500-InternalServerError'
 
-
   /v2/clusters/{name}:
     parameters:
       - $ref: '#/components/parameters/ActiveProjectIdHeader'
@@ -189,6 +171,7 @@ paths:
           $ref: '#/components/responses/404-NotFound'
         "500":
           $ref: '#/components/responses/500-InternalServerError'
+
   /v2/clusters/{nodeId}/clusterdetail:
     parameters:
       - $ref: '#/components/parameters/ActiveProjectIdHeader'
@@ -214,6 +197,7 @@ paths:
           $ref: '#/components/responses/400-BadRequest'
         "404":
           $ref: '#/components/responses/404-NotFound'
+
   /v2/clusters/{name}/nodes:
     parameters:
       - $ref: '#/components/parameters/ActiveProjectIdHeader'
@@ -390,21 +374,6 @@ paths:
           $ref: '#/components/responses/404-NotFound'
         "500":
           $ref: '#/components/responses/500-InternalServerError'
-  /v2/healthz:
-    get:
-      description: Gets the Cluster Manager REST API healthz status.
-      security: [] # skips authentication
-      tags:
-        - Health Check
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: string
-        "500":
-          $ref: '#/components/responses/500-InternalServerError'
 
   /v2/templates:
     parameters:
@@ -481,7 +450,6 @@ paths:
           $ref: '#/components/responses/404-NotFound'
         "500":
           $ref: '#/components/responses/500-InternalServerError'
-
     post:
       description: Import templates
       tags:
@@ -556,6 +524,7 @@ paths:
           $ref: '#/components/responses/404-NotFound'
         "500":
           $ref: '#/components/responses/500-InternalServerError'
+
   /v2/templates/{name}/versions:
     parameters:
       - $ref: '#/components/parameters/ActiveProjectIdHeader'
@@ -586,6 +555,7 @@ paths:
           $ref: '#/components/responses/404-NotFound'
         "500":
           $ref: '#/components/responses/500-InternalServerError'
+
   /v2/templates/{name}/default:
      parameters:
       - $ref: '#/components/parameters/ActiveProjectIdHeader'
@@ -615,6 +585,38 @@ paths:
           $ref: '#/components/responses/400-BadRequest'
         "404":
           $ref: '#/components/responses/404-NotFound'
+        "500":
+          $ref: '#/components/responses/500-InternalServerError'
+
+  /v2/healthz:
+    get:
+      description: Gets the Cluster Manager REST API healthz status.
+      security: [] # skips authentication
+      tags:
+        - Health Check
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          $ref: '#/components/responses/500-InternalServerError'
+
+  /v2/metrics:
+    get:
+      description: Gets the Cluster Manager REST API prometheus metrics.
+      security: [] # skips authentication
+      tags:
+        - metrics
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
         "500":
           $ref: '#/components/responses/500-InternalServerError'
 
